--- a/contacto.qmd
+++ b/contacto.qmd
@@ -13,4 +13,11 @@ Docente del curso
 - 💻[Página Web](https://segana.netlify.app) 
 - 🐈[Github](https://github.com/sebaegana)
 
+**Felipe Torres**  
+Docente del curso  
+
+- 📧 ftorres@fen.uchile.cl  
+- 💼 [LinkedIn](https://www.linkedin.com/in/ftorresfdez)
+
+
 
